[package]
name = "tinkerforge-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.60" }
convert_case = "0.6.0"
proc-macro2 = "1.0.81"
prettyplease = "0.2.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.115"

[dev-dependencies]
similar = "2.5.0"